# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  converter.py  generate_diff.py  get_diff.py  parsers.py
gendiff/formatters/: json.py  make_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  generate_diff.py  get_diff.py  parsers.py
gendiff/tests/: test_generate_diff.py
gendiff_src/: cli.py
gendiff_src/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/test_data/: expected_json.txt
